force-app/main/default/objects/Opportunity/fields/GeracaoAnualEstimada__c.field-meta.xml
<CustomField>
    <fullName>GeracaoAnualEstimada__c</fullName>
    <label>Geração anual estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>