force-app/main/default/objects/Opportunity/fields/GeracaoDesejadaMensalB__c.field-meta.xml
<CustomField>
    <fullName>GeracaoDesejadaMensalB__c</fullName>
    <label>Geração Desejada mensal - B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>