force-app/main/default/objects/Opportunity/fields/GeracaoDesejadaMinima__c.field-meta.xml
<CustomField>
    <fullName>GeracaoDesejadaMinima__c</fullName>
    <description>Campo para definir a geração desejada mínima.</description>
    <label>Geração Desejada Minima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>