force-app/main/default/objects/Opportunity/fields/GeracaoMedioMensal__c.field-meta.xml
<CustomField>
    <fullName>GeracaoMedioMensal__c</fullName>
    <label>Geração Médio Mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>