force-app/main/default/objects/Opportunity/fields/GeracaoMensalEstimada__c.field-meta.xml
<CustomField>
    <fullName>GeracaoMensalEstimada__c</fullName>
    <label>Geração mensal estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>