force-app/main/default/objects/Opportunity/fields/GrupoTarifario__c.field-meta.xml
<CustomField>
    <fullName>GrupoTarifario__c</fullName>
    <description>Campo para definir o sub-grupo tarifário.</description>
    <label>Grupo Tarifário</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grupo A</fullName>
            </value>
            <value>
                <fullName>Grupo B</fullName>
            </value>
            <value>
                <fullName>Grupo B Optante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>