force-app/main/default/objects/Opportunity/fields/Haver_aumento_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Haver_aumento_de_carga__c</fullName>
    <label>Haverá aumento de carga?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>