force-app/main/default/objects/Opportunity/fields/IdVirtualOffice__c.field-meta.xml
<CustomField>
    <fullName>IdVirtualOffice__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Id no virtual office</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>