force-app/main/default/objects/Opportunity/fields/Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Instalacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instalação</label>
    <referenceTo>Instalacao__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>