force-app/main/default/objects/Opportunity/fields/IntegradoRevo__c.field-meta.xml
<CustomField>
    <fullName>IntegradoRevo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrado Revo</label>
    <type>Checkbox</type>
</CustomField>