force-app/main/default/objects/Opportunity/fields/Inversor_1_Potencia_Nominal__c.field-meta.xml
<CustomField>
    <fullName>Inversor_1_Potencia_Nominal__c</fullName>
    <label>Inversor 1 - Potência Nominal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>