force-app/main/default/objects/Opportunity/fields/Inversor_2_Modelo__c.field-meta.xml
<CustomField>
    <fullName>Inversor_2_Modelo__c</fullName>
    <label>Inversor 2 - Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>