force-app/main/default/objects/Opportunity/fields/Inversor_2_Quantitativo__c.field-meta.xml
<CustomField>
    <fullName>Inversor_2_Quantitativo__c</fullName>
    <label>Inversor 2 - Quantitativo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>