force-app/main/default/objects/Opportunity/fields/Inversor_3_Modelo__c.field-meta.xml
<CustomField>
    <fullName>Inversor_3_Modelo__c</fullName>
    <label>Inversor 3 - Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>