force-app/main/default/objects/Opportunity/fields/IsDirect__c.field-meta.xml
<CustomField>
    <fullName>IsDirect__c</fullName>
    <formula>AND( 
CONTAINS(RecordType.Name, &quot;Micro&quot;),
ISPICKVAL(GrupoTarifario__c, &quot;Grupo B&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É Direct</label>
    <type>Checkbox</type>
</CustomField>