force-app/main/default/objects/Opportunity/fields/IsRSD__c.field-meta.xml
<CustomField>
    <fullName>IsRSD__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indica se a proposta deve adicionar o item RSD. Enviado ao endpoint api/Proposal/updateInfosKit via campo IsRSD (Boolean ou null).</description>
    <label>Adicionar RSD</label>
    <type>Checkbox</type>
</CustomField>