force-app/main/default/objects/Opportunity/fields/Kwh__c.field-meta.xml
<CustomField>
    <fullName>Kwh__c</fullName>
    <label>KWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>