force-app/main/default/objects/Opportunity/fields/KwhAnual__c.field-meta.xml
<CustomField>
    <fullName>KwhAnual__c</fullName>
    <formula>Kwh__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kwh Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>