force-app/main/default/objects/Opportunity/fields/LastInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>LastInvoiceAmount__c</fullName>
    <label>Valor da Ultima Fatura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>