force-app/main/default/objects/Opportunity/fields/LiberacaoComissao_PosStartup__c.field-meta.xml
<CustomField>
    <fullName>LiberacaoComissao_PosStartup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liberação Comissão (Pós Startup)</label>
    <type>Checkbox</type>
</CustomField>