force-app/main/default/objects/Opportunity/fields/LiberacaoComissao_PosVT__c.field-meta.xml
<CustomField>
    <fullName>LiberacaoComissao_PosVT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liberação Comissão (Pós VT)</label>
    <type>Checkbox</type>
</CustomField>