force-app/main/default/objects/Opportunity/fields/LiberacaoRecebimento_AceiteProvisorio__c.field-meta.xml
<CustomField>
    <fullName>LiberacaoRecebimento_AceiteProvisorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liberação Recebimento(Aceite Provisório)</label>
    <type>Checkbox</type>
</CustomField>