force-app/main/default/objects/Opportunity/fields/LiberacaoRecebimento_ConclusaoObra__c.field-meta.xml
<CustomField>
    <fullName>LiberacaoRecebimento_ConclusaoObra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liberação Recebimento (Conclusão Obra)</label>
    <type>Checkbox</type>
</CustomField>