force-app/main/default/objects/Opportunity/fields/LiberacaoRecebimento_ProjetoAprovado__c.field-meta.xml
<CustomField>
    <fullName>LiberacaoRecebimento_ProjetoAprovado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liberação Recebimento (Projeto Aprovado)</label>
    <type>Checkbox</type>
</CustomField>