force-app/main/default/objects/Opportunity/fields/LinkContrato__c.field-meta.xml
<CustomField>
    <fullName>LinkContrato__c</fullName>
    <label>Link do contrato</label>
    <type>Url</type>
</CustomField>