force-app/main/default/objects/Opportunity/fields/LinkContratoEnviado__c.field-meta.xml
<CustomField>
    <fullName>LinkContratoEnviado__c</fullName>
    <description>Preenchido pela integração com a Nivello.</description>
    <label>Link do contrato enviado</label>
    <type>Url</type>
</CustomField>