force-app/main/default/objects/Opportunity/fields/LocalizacaoFixa__c.field-meta.xml
<CustomField>
    <fullName>LocalizacaoFixa__c</fullName>
    <label>Localização Fixa</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>