force-app/main/default/objects/Opportunity/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <description>Campo para definição de Logradouro da Oportunidade.</description>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>