force-app/main/default/objects/Opportunity/fields/LogradouroDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>LogradouroDoProprietario__c</fullName>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>