force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Motivo da perda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inviabilidade Financeira</fullName>
            </value>
            <value>
                <fullName>Inviabilidade Técnica</fullName>
            </value>
            <value>
                <fullName>Sem área para instalação</fullName>
            </value>
            <value>
                <fullName>Parado por 30 dias</fullName>
            </value>
            <value>
                <fullName>Sem contato com o cliente ou consultor</fullName>
            </value>
            <value>
                <fullName>Cliente fechou com outra empresa</fullName>
            </value>
            <value>
                <fullName>Consultor/Cliente recusou a proposta</fullName>
            </value>
            <value>
                <fullName>Cliente desistiu</fullName>
            </value>
            <value>
                <fullName>Cliente retomará a negociação em outra data</fullName>
            </value>
            <value>
                <fullName>Cliente prosseguiu com outra proposta, duplicata</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>