force-app/main/default/objects/Opportunity/fields/MainViability__c.field-meta.xml
<CustomField>
    <fullName>MainViability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Viabilidade Principal</label>
    <referenceTo>ViabilityStudy__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>