force-app/main/default/objects/Opportunity/fields/MediaConsumo__c.field-meta.xml
<CustomField>
    <fullName>MediaConsumo__c</fullName>
    <label>Média de Consumo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>