force-app/main/default/objects/Opportunity/fields/ModalidadeTarifaria__c.field-meta.xml
<CustomField>
    <fullName>ModalidadeTarifaria__c</fullName>
    <label>Modalidade Tarifária</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>