force-app/main/default/objects/Opportunity/fields/ModalidadeVenda__c.field-meta.xml
<CustomField>
    <fullName>ModalidadeVenda__c</fullName>
    <description>Campo para definir a modalidade de venda.</description>
    <label>Modalidade de Venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venda Direta - Enerzee</fullName>
            </value>
            <value>
                <fullName>Convênio - Cocari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>