force-app/main/default/objects/Opportunity/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <description>Campo para definir o modelo.</description>
    <label>Modelo Módulos</label>
    <length>80</length>
    <type>Text</type>
</CustomField>