force-app/main/default/objects/Opportunity/fields/ModeloInversor__c.field-meta.xml
<CustomField>
    <fullName>ModeloInversor__c</fullName>
    <description>Campo para definir Modelo Inversor.</description>
    <label>Modelo Inversor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>