force-app/main/default/objects/Opportunity/fields/MotivoReadequacaoProposta__c.field-meta.xml
<CustomField>
    <fullName>MotivoReadequacaoProposta__c</fullName>
    <label>Motivo de readequação de proposta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>