force-app/main/default/objects/Opportunity/fields/MotivoRevisaoProposta__c.field-meta.xml
<CustomField>
    <fullName>MotivoRevisaoProposta__c</fullName>
    <label>Motivo revisão proposta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>