force-app/main/default/objects/Opportunity/fields/MunicipioInstalacao__c.field-meta.xml
<CustomField>
    <fullName>MunicipioInstalacao__c</fullName>
    <description>Campo para definição de Município da Oportunidade.</description>
    <label>Município Instalação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>