force-app/main/default/objects/Opportunity/fields/Nascionalidade__c.field-meta.xml
<CustomField>
    <fullName>Nascionalidade__c</fullName>
    <label>Nacionalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brasileiro</fullName>
            </value>
            <value>
                <fullName>Estrangeiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>