force-app/main/default/objects/Opportunity/fields/NecessarioProtocolarProjetoCCSS__c.field-meta.xml
<CustomField>
    <fullName>NecessarioProtocolarProjetoCCSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessário protoc. proj na concess.</label>
    <type>Checkbox</type>
</CustomField>