force-app/main/default/objects/Opportunity/fields/NFEnviada_AceiteProvisorio__c.field-meta.xml
<CustomField>
    <fullName>NFEnviada_AceiteProvisorio__c</fullName>
    <label>NF Enviada (Aceite Provisório)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>