force-app/main/default/objects/Opportunity/fields/NFEnviada_ConclusaoObra__c.field-meta.xml
<CustomField>
    <fullName>NFEnviada_ConclusaoObra__c</fullName>
    <label>NF Enviada (Conclusão Obra)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>