force-app/main/default/objects/Opportunity/fields/NFEnviada_ProjetoAprovado__c.field-meta.xml
<CustomField>
    <fullName>NFEnviada_ProjetoAprovado__c</fullName>
    <label>NF Enviada (Projeto Aprovado)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>