force-app/main/default/objects/Opportunity/fields/NFEnviadaaREVO_PosStartup__c.field-meta.xml
<CustomField>
    <fullName>NFEnviadaaREVO_PosStartup__c</fullName>
    <label>NF Enviada a REVO (Pós Startup)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>