force-app/main/default/objects/Opportunity/fields/NFEnviadaaREVO_PosVT__c.field-meta.xml
<CustomField>
    <fullName>NFEnviadaaREVO_PosVT__c</fullName>
    <label>NF Enviada a REVO (Pós VT)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>