force-app/main/default/objects/Opportunity/fields/NomeDaConta__c.field-meta.xml
<CustomField>
    <fullName>NomeDaConta__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Conta</label>
    <type>Text</type>
</CustomField>