force-app/main/default/objects/Opportunity/fields/NomeDoDevedor__c.field-meta.xml
<CustomField>
    <fullName>NomeDoDevedor__c</fullName>
    <label>Nome Completo</label>
    <length>120</length>
    <type>Text</type>
</CustomField>