force-app/main/default/objects/Opportunity/fields/NomeDoResponsavel__c.field-meta.xml
<CustomField>
    <fullName>NomeDoResponsavel__c</fullName>
    <label>Nome do Responsavel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>