force-app/main/default/objects/Opportunity/fields/NotePaymentCondiiton__c.field-meta.xml
<CustomField>
    <fullName>NotePaymentCondiiton__c</fullName>
    <label>Observação Condição de Pagamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>