force-app/main/default/objects/Opportunity/fields/NotePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>NotePaymentMethod__c</fullName>
    <label>Observação Metodo de Pagamento</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>