force-app/main/default/objects/Opportunity/fields/Notificacao7DiasEnviada__c.field-meta.xml
<CustomField>
    <fullName>Notificacao7DiasEnviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para controlar se já foi enviada para esta oportunidade a notificação de aviso de 7 dias úteis na fase de Contrato enviado</description>
    <label>Notificação de 7 dias enviada</label>
    <type>Checkbox</type>
</CustomField>