force-app/main/default/objects/Opportunity/fields/NumeroContrato__c.field-meta.xml
<CustomField>
    <fullName>NumeroContrato__c</fullName>
    <label>Número do contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>