force-app/main/default/objects/Opportunity/fields/NumeroDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>NumeroDoProprietario__c</fullName>
    <label>Número</label>
    <length>10</length>
    <type>Text</type>
</CustomField>