force-app/main/default/objects/Opportunity/fields/NumeroInstalacao__c.field-meta.xml
<CustomField>
    <fullName>NumeroInstalacao__c</fullName>
    <label>Número da Instalação</label>
    <length>80</length>
    <type>Text</type>
</CustomField>