force-app/main/default/objects/Opportunity/fields/NumeroInversores__c.field-meta.xml
<CustomField>
    <fullName>NumeroInversores__c</fullName>
    <description>Campo para definir o número de inversores.</description>
    <label>Número de Inversores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>