force-app/main/default/objects/Opportunity/fields/NumeroModulos__c.field-meta.xml
<CustomField>
    <fullName>NumeroModulos__c</fullName>
    <description>Campo para definir o numero de módulos.</description>
    <label>Número de Módulos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>