force-app/main/default/objects/Opportunity/fields/NumeroOrigemContrato__c.field-meta.xml
<CustomField>
    <fullName>NumeroOrigemContrato__c</fullName>
    <description>Valor do número de origem do contrato do Pedido de Compra/Venda</description>
    <label>Número de Origem do Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>