force-app/main/default/objects/Opportunity/fields/NumeroPedido__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedido__c</fullName>
    <label>Número do pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>