force-app/main/default/objects/Opportunity/fields/Numeroproposta__c.field-meta.xml
<CustomField>
    <fullName>Numeroproposta__c</fullName>
    <displayFormat>P-{000000}</displayFormat>
    <label>Número da Proposta</label>
    <type>AutoNumber</type>
</CustomField>