force-app/main/default/objects/Opportunity/fields/O_padr_o_ser_readequado__c.field-meta.xml
<CustomField>
    <fullName>O_padr_o_ser_readequado__c</fullName>
    <label>O padrão será readequado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>