force-app/main/default/objects/Opportunity/fields/Observacao_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Observacao_Proposta__c</fullName>
    <label>Observação Proposta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>