force-app/main/default/objects/Opportunity/fields/ObservacaoAprovacao__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoAprovacao__c</fullName>
    <label>Observação Aprovação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>