force-app/main/default/objects/Opportunity/fields/ObservacaoPagamentoDireito__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoPagamentoDireito__c</fullName>
    <label>Observação Pagamento Direito</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>