force-app/main/default/objects/Opportunity/fields/ObservacaoPagamentoEsquerdo__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoPagamentoEsquerdo__c</fullName>
    <label>Observação Pagamento Esquerdo</label>
    <type>Html</type>
    <length>32768</length>
</CustomField>