force-app/main/default/objects/Opportunity/fields/ObservacaoSolicitacaoAprovacaoDesconto__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoSolicitacaoAprovacaoDesconto__c</fullName>
    <label>Observação Solicitação de Aprovação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>