force-app/main/default/objects/Opportunity/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <description>Campo para definir as observações da proposta.</description>
    <label>Observações</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>