force-app/main/default/objects/Opportunity/fields/Observacoes_pos_sombreamento__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_pos_sombreamento__c</fullName>
    <label>Observações pós sombreamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>