force-app/main/default/objects/Opportunity/fields/ObterNumeroContrato__c.field-meta.xml
<CustomField>
    <fullName>ObterNumeroContrato__c</fullName>
    <formula>Contract.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obter Número do Contrato</label>
    <type>Text</type>
</CustomField>