force-app/main/default/objects/Opportunity/fields/OrgaoEmissor__c.field-meta.xml
<CustomField>
    <fullName>OrgaoEmissor__c</fullName>
    <label>Orgão Emissor</label>
    <length>15</length>
    <type>Text</type>
</CustomField>