force-app/main/default/objects/Opportunity/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nivello</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Escritório Virtual</fullName>
            </value>
            <value>
                <fullName>Bitrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>