force-app/main/default/objects/Opportunity/fields/Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Parceiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parceiro</label>
    <referenceTo>Parceiro__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>