force-app/main/default/objects/Opportunity/fields/ParceiroRegistroOportunidade__c.field-meta.xml
<CustomField>
    <fullName>ParceiroRegistroOportunidade__c</fullName>
    <label>Parceiro de registro de oportunidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revo</fullName>
            </value>
            <value>
                <fullName>Greenyellow</fullName>
            </value>
            <value>
                <fullName>Comerc</fullName>
            </value>
            <value>
                <fullName>Auren</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>