force-app/main/default/objects/Opportunity/fields/ParentOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ParentOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade Pai</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>