force-app/main/default/objects/Opportunity/fields/PartnerName__c.field-meta.xml
<CustomField>
    <fullName>PartnerName__c</fullName>
    <label>Nome do Parceiro</label>
    <length>40</length>
    <type>Text</type>
</CustomField>