force-app/main/default/objects/Opportunity/fields/PaybackAno25__c.field-meta.xml
<CustomField>
    <fullName>PaybackAno25__c</fullName>
    <label>Payback Ano 25</label>
    <length>255</length>
    <type>Text</type>
</CustomField>