force-app/main/default/objects/Opportunity/fields/PaybackAnos__c.field-meta.xml
<CustomField>
    <fullName>PaybackAnos__c</fullName>
    <label>Payback (Anos)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>