force-app/main/default/objects/Opportunity/fields/paymentMethod__c.field-meta.xml
<CustomField>
    <fullName>paymentMethod__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>SALDO + E-CASH</fullName>
            </value>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>Transferência Bancária</fullName>
            </value>
            <value>
                <fullName>PIX</fullName>
            </value>
            <value>
                <fullName>Cartão Crédito</fullName>
            </value>
            <value>
                <fullName>Financiamento Bancário</fullName>
            </value>
            <value>
                <fullName>E-cash</fullName>
            </value>
            <value>
                <fullName>Aguardando Pagamento</fullName>
            </value>
            <value>
                <fullName>Parcial E-cash e Saldo Virtual</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Pix e Saldo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>