force-app/main/default/objects/Opportunity/fields/PedidoReadequacao__c.field-meta.xml
<CustomField>
    <fullName>PedidoReadequacao__c</fullName>
    <description>Campo para descrição do motivo de readequação da proposta.</description>
    <label>Pedido de Readequação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>