force-app/main/default/objects/Opportunity/fields/PercDescontoUFV__c.field-meta.xml
<CustomField>
    <fullName>PercDescontoUFV__c</fullName>
    <formula>(DescontoUFV__c / ValorTotalPropostaOriginal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Desconto UFV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>