force-app/main/default/objects/Opportunity/fields/PerfilVisualizacao__c.field-meta.xml
<CustomField>
    <fullName>PerfilVisualizacao__c</fullName>
    <label>Perfil Visualização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>