force-app/main/default/objects/Opportunity/fields/Pesokg__c.field-meta.xml
<CustomField>
    <fullName>Pesokg__c</fullName>
    <description>Campo para definir o peso Kg.</description>
    <label>Peso (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>