force-app/main/default/objects/Opportunity/fields/Pontos__c.field-meta.xml
<CustomField>
    <fullName>Pontos__c</fullName>
    <description>Campo para definição de Pontos.</description>
    <label>Pontos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>