force-app/main/default/objects/Opportunity/fields/PontosOriginal__c.field-meta.xml
<CustomField>
    <fullName>PontosOriginal__c</fullName>
    <label>Pontos Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>