force-app/main/default/objects/Opportunity/fields/PontosRS__c.field-meta.xml
<CustomField>
    <fullName>PontosRS__c</fullName>
    <description>Campo para definição de Pontos (R$).</description>
    <label>Pontos (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>