force-app/main/default/objects/Opportunity/fields/PorcentagemAumentoConsumo__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemAumentoConsumo__c</fullName>
    <label>Porcentagem do Aumento no Consumo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>