force-app/main/default/objects/Opportunity/fields/PotenciaModulos__c.field-meta.xml
<CustomField>
    <fullName>PotenciaModulos__c</fullName>
    <description>Campo para definir Potência dos módulos.</description>
    <label>Potência dos módulos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>