force-app/main/default/objects/Opportunity/fields/PotenciaNominalSistema__c.field-meta.xml
<CustomField>
    <fullName>PotenciaNominalSistema__c</fullName>
    <label>Potência Nominal do Sistema (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>