force-app/main/default/objects/Opportunity/fields/PotenciaNominalWp__c.field-meta.xml
<CustomField>
    <fullName>PotenciaNominalWp__c</fullName>
    <description>Campo para definir a potencia nominal.</description>
    <label>Potência Nominal do Módulo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>