force-app/main/default/objects/Opportunity/fields/PotenciaPicoSistema__c.field-meta.xml
<CustomField>
    <fullName>PotenciaPicoSistema__c</fullName>
    <description>Campo para definir a potencia pico do sistema.</description>
    <label>Potência Pico do Sistema (kWp)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>